# osa_airp1_foldy_base_robot

airp1_foldy_base_apps/: CMakeLists.txt  package.xml
airp1_foldy_base_bringup/: CMakeLists.txt  package.xml
airp1_foldy_base_bringup/launch/: airp1_foldy_base_bringup.launch  amcl.launch  gmapping.launch  pointcloud_to_laserscan.launch
airp1_foldy_base_bringup/launch/includes/: amcl.launch.xml  move_base.launch.xml
airp1_foldy_base_bringup/maps/: map.pgm  office_test.yaml
airp1_foldy_base_bringup/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
airp1_foldy_base_bringup/script/: launch_airp1_foldy_base.sh
airp1_foldy_base_canopen/: CMakeLists.txt  package.xml
airp1_foldy_base_canopen/config/: EPOS4_ECi40.dcf  EPOS4_ECi40.dcf.bck  canopen_bus_layer.yaml  node_layer.yaml
airp1_foldy_base_canopen/launch/: airp1_foldy_base_canopen.launch  airp1_foldy_base_canopen_motor.launch
airp1_foldy_base_control/: CMakeLists.txt  package.xml
airp1_foldy_base_control/config/: airp1_foldy_base_control.yaml
airp1_foldy_base_control/launch/: airp1_foldy_base_control.launch
airp1_foldy_base_description/: CMakeLists.txt  package.xml
airp1_foldy_base_description/config/: airp1_foldy_base_geometry.yaml  airp1_foldy_base_motors.yaml  urdf.rviz
airp1_foldy_base_description/launch/: airp1_foldy_base_control.launch  airp1_foldy_base_gazebo.launch  airp1_foldy_base_rviz.launch
airp1_foldy_base_description/meshes/collision/: foldy_base_05_foldy_base_link_collision.stl
airp1_foldy_base_description/urdf/: airp1_foldy_base.gazebo  airp1_foldy_base.xacro  airp1_foldy_base_gazebo.xacro
airp1_foldy_base_description/worlds/: airp1_foldy_base.world
r2p_foldy_base_canopen/: CMakeLists.txt  package.xml
r2p_foldy_base_canopen/config/: .canopen_bus_layer.yaml.swp  canopen_bus_layer.yaml  controller.yaml  node_layer.yaml
r2p_foldy_base_canopen/launch/: r2p_foldy_base_canopen.launch  r2p_foldy_base_canopen_motor.launch
r2p_foldy_base_canopen/scripts/: r2p_foldy_base_mapping.py
(+70 files in other folders)
