<package>
  <name>airp1_foldy_base_canopen</name>
  <version>0.1.1</version>
  <description>CANOpen config files for AIRP1 Foldy Base.</description>
  <maintainer email="contact@therobotstudio.com">Rob Knight</maintainer>

  <license>BSD</license>

  <author>Cyril Jourdan</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
