<package>
  <name>airp1_foldy_base_description</name>
  <version>0.1.1</version>
  <description>Config files that describe the AIRP1 Foldy Base.</description>
  <maintainer email="contact@therobotstudio.com">Rob Knight</maintainer>

  <license>BSD</license>

  <author>Cyril Jourdan</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
