<package>
  <name>r2p_foldy_base_canopen</name>
  <version>0.1.0</version>
  <description>CANOpen config files for R2P1 Foldy Base.</description>
  <maintainer email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</maintainer>

  <license>Simplified BSD</license>

  <author>Cyril Jourdan</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
